--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -417,7 +417,7 @@ padding: 30px 65px;
 .product-detail-container{
   display: flex;
  gap: 40px;
- margin: 40px;
+ margin-left: 230px;
  margin-top: 60px;
  color: #324d67;
 
@@ -618,7 +618,7 @@ margin-top: 160px;
   margin-top: 10px;
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width:1100px) {
   .hero-banner-container{
     height: 560px;
   }
